feat: update file path in server (#188)
ref: modifier nginx in client
ref: make file for AI
feat: docker compose