@@ -2,8 +2,12 @@ package com.kltn.server.util.token;
 
 import com.kltn.server.error.AppException;
 import com.kltn.server.error.Error;
+
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.Resource;
+import org.springframework.core.io.ResourceLoader;
 import org.springframework.stereotype.Component;
 
 import java.io.IOException;
@@ -19,106 +23,111 @@ import java.util.Base64;
 
 @Component
 public class TokenKeyUtils {
-    @Value("${spring.application.security.access-token.key.private-key}")
-    private String accessPriKeyPlacingFile;
-    @Value("${spring.application.security.access-token.key.public-key}")
-    private String accessPubKeyPlacingFile;
-    @Value("${spring.application.security.refresh-token.key.private-key}")
-    private String refreshPriKeyPlacingFile;
-    @Value("${spring.application.security.refresh-token.key.public-key}")
-    private String refreshPubKeyPlacingFile;
+  @Autowired
+  private ResourceLoader resourceLoader;
 
-    @Value("${spring.application.security.verify-token.key.private-key}")
-    private String verifyPriKeyPlacingFile;
-    @Value("${spring.application.security.verify-token.key.public-key}")
-    private String verifyPubKeyPlacingFile;
+  @Value("${spring.application.security.access-token.key.private-key}")
+  private String accessPriKeyPlacingFile;
+  @Value("${spring.application.security.access-token.key.public-key}")
+  private String accessPubKeyPlacingFile;
+  @Value("${spring.application.security.refresh-token.key.private-key}")
+  private String refreshPriKeyPlacingFile;
+  @Value("${spring.application.security.refresh-token.key.public-key}")
+  private String refreshPubKeyPlacingFile;
 
-    private RSAPublicKey accessPublicKey;
-    private RSAPrivateKey accessPrivateKey;
-    private RSAPublicKey refreshPublicKey;
-    private RSAPrivateKey refreshPrivateKey;
-    private RSAPublicKey verifyPublicKey;
-    private RSAPrivateKey verifyPrivateKey;
+  @Value("${spring.application.security.verify-token.key.private-key}")
+  private String verifyPriKeyPlacingFile;
+  @Value("${spring.application.security.verify-token.key.public-key}")
+  private String verifyPubKeyPlacingFile;
 
-    // Read a public key from a file
-    private RSAPublicKey getPublicKey(String filePath) {
-        try {
-            String keyContent = new String(Files.readAllBytes((new ClassPathResource(filePath).getFile().toPath())))
-                    .replace("-----BEGIN PUBLIC KEY-----", "")
-                    .replace("-----END PUBLIC KEY-----", "")
-                    .replaceAll("\\s", ""); // Remove unnecessary spaces or new lines
+  private RSAPublicKey accessPublicKey;
+  private RSAPrivateKey accessPrivateKey;
+  private RSAPublicKey refreshPublicKey;
+  private RSAPrivateKey refreshPrivateKey;
+  private RSAPublicKey verifyPublicKey;
+  private RSAPrivateKey verifyPrivateKey;
 
-            byte[] decodedKey = Base64.getDecoder().decode(keyContent);
-            X509EncodedKeySpec keySpec = new X509EncodedKeySpec(decodedKey);
-            KeyFactory keyFactory = KeyFactory.getInstance("RSA");
+  // Read a public key from a file
+  private RSAPublicKey getPublicKey(String filePath) {
+    try {
+      Resource resource = resourceLoader.getResource(filePath);
+      String keyContent = new String((resource.getInputStream().readAllBytes()))
+          .replace("-----BEGIN PUBLIC KEY-----", "")
+          .replace("-----END PUBLIC KEY-----", "")
+          .replaceAll("\\s", ""); // Remove unnecessary spaces or new lines
 
-            return (RSAPublicKey) keyFactory.generatePublic(keySpec);
-        } catch (IOException e) {
-            throw AppException.builder().error(Error.PUBLIC_KEY_READ_ERROR).build();
-        } catch (NoSuchAlgorithmException | InvalidKeySpecException e) {
-            throw AppException.builder().error(Error.PUBLIC_KEY_GENERATION_ERROR).build();
-        }
+      byte[] decodedKey = Base64.getDecoder().decode(keyContent);
+      X509EncodedKeySpec keySpec = new X509EncodedKeySpec(decodedKey);
+      KeyFactory keyFactory = KeyFactory.getInstance("RSA");
+
+      return (RSAPublicKey) keyFactory.generatePublic(keySpec);
+    } catch (IOException e) {
+      throw AppException.builder().error(Error.PUBLIC_KEY_READ_ERROR).build();
+    } catch (NoSuchAlgorithmException | InvalidKeySpecException e) {
+      throw AppException.builder().error(Error.PUBLIC_KEY_GENERATION_ERROR).build();
     }
+  }
 
-    // Read a private key from a file
-    private RSAPrivateKey getPrivateKey(String filePath) {
-        try {
-            String keyContent = new String(Files.readAllBytes((new ClassPathResource(filePath).getFile().toPath())))
-                    .replace("-----BEGIN PRIVATE KEY-----", "")
-                    .replace("-----END PRIVATE KEY-----", "")
-                    .replaceAll("\\s", ""); // Rem unnecessary spaces or new lines
+  // Read a private key from a file
+  private RSAPrivateKey getPrivateKey(String filePath) {
+    try {
+      Resource resource = resourceLoader.getResource(filePath);
+      String keyContent = new String((resource.getInputStream().readAllBytes()))
+          .replace("-----BEGIN PRIVATE KEY-----", "")
+          .replace("-----END PRIVATE KEY-----", "")
+          .replaceAll("\\s", ""); // Rem unnecessary spaces or new lines
 
-            byte[] decodedKey = Base64.getDecoder().decode(keyContent);
-            PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(decodedKey);
-            KeyFactory keyFactory = KeyFactory.getInstance("RSA");
+      byte[] decodedKey = Base64.getDecoder().decode(keyContent);
+      PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(decodedKey);
+      KeyFactory keyFactory = KeyFactory.getInstance("RSA");
 
-            return (RSAPrivateKey) keyFactory.generatePrivate(keySpec);
-        } catch (IOException e) {
-            throw AppException.builder().error(Error.PRIVATE_KEY_READ_ERROR).build();
-        } catch (NoSuchAlgorithmException | InvalidKeySpecException e) {
-            throw AppException.builder().error(Error.PRIVATE_KEY_GENERATION_ERROR).build();
-        }
+      return (RSAPrivateKey) keyFactory.generatePrivate(keySpec);
+    } catch (IOException e) {
+      throw AppException.builder().error(Error.PRIVATE_KEY_READ_ERROR).build();
+    } catch (NoSuchAlgorithmException | InvalidKeySpecException e) {
+      throw AppException.builder().error(Error.PRIVATE_KEY_GENERATION_ERROR).build();
     }
+  }
 
-    public RSAPublicKey getAccessPublicKey() {
-        if (accessPublicKey == null) {
-            accessPublicKey = getPublicKey(accessPubKeyPlacingFile);
-        }
-        return accessPublicKey;
+  public RSAPublicKey getAccessPublicKey() {
+    if (accessPublicKey == null) {
+      accessPublicKey = getPublicKey(accessPubKeyPlacingFile);
     }
+    return accessPublicKey;
+  }
 
-    public RSAPrivateKey getAccessPrivateKey() {
-        if (accessPrivateKey == null) {
-            accessPrivateKey = getPrivateKey(accessPriKeyPlacingFile);
-        }
-        return accessPrivateKey;
+  public RSAPrivateKey getAccessPrivateKey() {
+    if (accessPrivateKey == null) {
+      accessPrivateKey = getPrivateKey(accessPriKeyPlacingFile);
     }
+    return accessPrivateKey;
+  }
 
-    public RSAPublicKey getRefreshPublicKey() {
-        if (refreshPublicKey == null) {
-            refreshPublicKey = getPublicKey(refreshPubKeyPlacingFile);
-        }
-        return refreshPublicKey;
+  public RSAPublicKey getRefreshPublicKey() {
+    if (refreshPublicKey == null) {
+      refreshPublicKey = getPublicKey(refreshPubKeyPlacingFile);
     }
+    return refreshPublicKey;
+  }
 
-    public RSAPrivateKey getRefreshPrivateKey() {
-        if (refreshPrivateKey == null) {
-            refreshPrivateKey = getPrivateKey(refreshPriKeyPlacingFile);
-        }
-        return refreshPrivateKey;
+  public RSAPrivateKey getRefreshPrivateKey() {
+    if (refreshPrivateKey == null) {
+      refreshPrivateKey = getPrivateKey(refreshPriKeyPlacingFile);
     }
+    return refreshPrivateKey;
+  }
 
-    public RSAPublicKey getVerifyPublicKey() {
-        if (verifyPublicKey == null) {
-            verifyPublicKey = getPublicKey(verifyPubKeyPlacingFile);
-        }
-        return verifyPublicKey;
+  public RSAPublicKey getVerifyPublicKey() {
+    if (verifyPublicKey == null) {
+      verifyPublicKey = getPublicKey(verifyPubKeyPlacingFile);
     }
+    return verifyPublicKey;
+  }
 
-    public RSAPrivateKey getVerifyPrivateKey() {
-        if (verifyPrivateKey == null) {
-            verifyPrivateKey = getPrivateKey(verifyPriKeyPlacingFile);
-        }
-        return verifyPrivateKey;
+  public RSAPrivateKey getVerifyPrivateKey() {
+    if (verifyPrivateKey == null) {
+      verifyPrivateKey = getPrivateKey(verifyPriKeyPlacingFile);
     }
+    return verifyPrivateKey;
+  }
 }
